feat: added eslint plugins, added Internationalization.jsx and dictionary to exports

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,12 @@
 {
   "presets": [
-    "env"
+    ["@babel/env", {
+      "targets": {
+        "browsers": ["last 2 versions", "IE 11"]
+      },
+      "debug": false
+    }],
+    "@babel/react"
   ],
-  "env": {
-    "browser": true
-  }
+  "plugins": ["@babel/plugin-proposal-object-rest-spread"]
 }
