--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,10 @@
 {
-  "extends": [
-    "webteam"
-  ],
+  "parser": "babel-eslint",
   "env": {
     "browser": true
-  }
+  },
+  "extends": [
+    "webteam",
+    "webteam/rules/react"
+  ]
 }
