--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.36",
     "@babel/preset-env": "^7.0.0-beta.34",
     "@babel/preset-react": "^7.0.0-beta.34",
-    "babel-loader": "^8.0.0-beta.0",
     "babel-eslint": "^8.0.3",
+    "babel-loader": "^8.0.0-beta.0",
     "condition-circle": "1.5.0",
     "eslint": "^4.9.0",
     "eslint-config-webteam": "^2.0.0",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "semantic-release": "^8.2.0",
-    "tape": "^4.8.0"
+    "tape": "^4.8.0",
+    "webpack": "^3.11.0"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
