--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
 machine:
   node:
-    version: v8.4.0
+    version: v9.5.0
 test:
   override:
-    - echo "TESTS ARE MANUALLY OVERRIDEN IN circle.yml. Write tests."
+    - echo "TESTS ARE MANUALLY OVERRIDEN IN circle.yml. No tests"
   post:
     - DEBUG=condition npm run semantic-release || true
