--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "node test/",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prepare": "babel ./src --out-dir ./lib --source-maps",
+    "test": "babel ./test/index.js --out-dir ./test/lib --source-maps && node ./test/lib/index.js",
     "eslint": "eslint ."
   },
   "devDependencies": {
