chore: upgrade to Circle 2.0, upgrade semantic-release. Security upgrades

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "node test/",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prepare": "babel ./src --out-dir ./lib --source-maps",
-    "test": "babel ./test/index.js --out-dir ./test/lib --source-maps && node ./test/lib/index.js",
-    "eslint": "eslint ."
+    "test": "echo \"Error: no test specified\"",
+    "eslint": "eslint .",
+    "nsp": "nsp check"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.34",
@@ -18,13 +18,13 @@
     "@babel/preset-react": "^7.0.0-beta.34",
     "babel-eslint": "^8.0.3",
     "babel-loader": "^8.0.0-beta.0",
-    "condition-circle": "1.5.0",
     "eslint": "^4.9.0",
     "eslint-config-webteam": "^2.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "semantic-release": "^8.2.0",
+    "nsp": "^3.2.1",
+    "semantic-release": "^15.5.1",
     "tape": "^4.8.0"
   },
   "dependencies": {
@@ -37,9 +37,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/miles-no/nocms-i18n.git"
-  },
-  "release": {
-    "verifyConditions": "condition-circle",
-    "debug": false
   }
 }
